[package]
categories  = ["command-line-utilities"]
description = "A command-line tool to change line endings in text files."
edition     = "2024"
homepage    = "https://github.com/lxl66566/lf"
keywords    = ["cli", "lf", "crlf"]
license     = "MIT"
name        = "lf"
repository  = "https://github.com/lxl66566/lf"
version     = "0.1.1"

[dependencies]
palc    = { version = "0.0.2" }
rayon   = "1"
walkdir = "2.3"

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
