[package]
categories   = ["command-line-utilities"]
description  = "A high-performance command-line tool to convert line endings of text files to LF."
edition      = "2024"
homepage     = "https://github.com/lxl66566/lf"
keywords     = ["cli", "lf", "crlf", "line-ending"]
license      = "MIT"
name         = "lf"
repository   = "https://github.com/lxl66566/lf"
rust-version = "1.85"
version      = "0.2.0"

[dependencies]
ignore   = { version = "0.4", optional = true }
palc     = { version = "0.0.2", optional = true }
tempfile = "3"

[features]
bin     = ["ignore", "palc"]
default = ["bin"]

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
